--- a/starter_code/src/styles/hero.css
+++ b/starter_code/src/styles/hero.css
@@ -1,7 +1,6 @@
 #hero{
     display: flex;
     flex-direction: row;
-    justify-content: center;
     background-color: tomato;
     padding: 20px;
 }
@@ -37,7 +36,8 @@
 .hero-img img{
     width: 100%;
     display: flex;
-    text-align: center;
+    /*text-align: center*/;
     border-radius: 20px;
+    justify-content: flex-end;
 }
 
