--- a/starter_code/src/styles/education-hero.css
+++ b/starter_code/src/styles/education-hero.css
@@ -42,4 +42,18 @@
     rgba(255, 255, 255, 0) 100%), linear-gradient(135deg, #72EDF2 0%, #5151E5 100%);
 }
 
+/*mobile firts*/
 
+#responsive {
+    background-color: hotpink;
+}
+.responsive-img img{
+    height: 50px;
+    width: 50px;
+
+}
+@media screen and (min-width: 900px){
+    #responsive{
+        background-color: indigo;
+    }
+}
