--- a/starter_code/src/styles/main.css
+++ b/starter_code/src/styles/main.css
@@ -27,3 +27,21 @@ body{
     margin: 15px;
 }
 
+/*@media screen and (max-width : 600px) {
+    body {
+        background-color: red;
+    }
+}*/
+
+/*@media screen and (max-width:900px){
+    body{
+        background-color: green;
+    }
+}*/
+
+@media screen and (min-width: 601px) and (max-width:900px){
+    body {
+        background-color: green;
+    }
+    
+}
